kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 4200
      targetPort: 80
  selector:
    app: frontend
